# ChangeLog for www-apps/postfixadmin
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*postfixadmin-2.3.1

  31 Jul 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +postfixadmin-2.3.1.ebuild:
  version bump

  20 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  postfixadmin-2.3.ebuild:
  fix HOMEPAGE #310303

  08 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  postfixadmin-2.3.ebuild, metadata.xml:
  fix issue

  29 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +postfixadmin-2.3.ebuild, +files/postinstall-en-2.3.txt,
  +files/database-credentials-debian.patch, +metadata.xml:
  initial commit #291248
