@@ -1,8 +1,10 @@
 AUX database-credentials-debian.patch 765 RMD160 429bfe3aae959891d6bcbed4df479aaee1f210d3 SHA1 bde6025a801c5a0be5abae69a386ca885bcc54fd SHA256 bf292f8617cbe441fd81a3bc72055999f7f40d5aa8895b4c5b4d8e7409f3b3d6
 AUX postinstall-en-2.3.txt 1695 RMD160 2607111f4a6bf12439a5c175c6962a293c8dfbe6 SHA1 faee6ea464430ca5694f408d220e28dbcb59cad3 SHA256 42474dc5f921af2f6512c281a6ae3adbc7f58e00932e200f3aa81cc7b20b7063
 DIST postfixadmin-2.3.1.tar.gz 1591190 RMD160 f8b6c293e4d3da706085bd3aae6d18799f05f960 SHA1 53258cb989cebfdad0dd236429e415c428f22699 SHA256 ecd7cc14f2f53f49432ed3d89f444606176bbc3ea6b81209c00f0998a93d4cd0
+DIST postfixadmin-2.3.2.tar.gz 1578191 RMD160 d09120b56f4a0a0a0389d979047241a440ce6fdd SHA1 d14908b975f42da428896ee56aa1cf1f23506b40 SHA256 1729712448b732ecf6a8cfce3df262089899b520338e4fc26e876cac1de4a0c6
 DIST postfixadmin_2.3.tar.gz 1558791 RMD160 c697b757a3730fdf8a8f107a0a474056edf6f2fc SHA1 c778a9dc115cba41933737fe8ee180dd5c7299e2 SHA256 e9fbb1dbb5567f01d87080427d42017c4afca85cfde5442219cb6b12023d1407
 EBUILD postfixadmin-2.3.1.ebuild 2568 RMD160 e92c0af56fa0115b50e538a7dcb856fb4229fb81 SHA1 3544ab33e6857e2ca34a25722a9daaa07bb93e78 SHA256 6f909a1365281f685183cb4634198564b1299d47cf092ba6ee1be0a1fa6ec32c
+EBUILD postfixadmin-2.3.2.ebuild 2550 RMD160 8942c77b2bb3493e66ff951e2c1a5421a8105b45 SHA1 3646e1de90eba48d66c7db3affd42605aa60eae6 SHA256 f1ceb54a5e6aa60c15a0d000e0f8a3d458df75320bebd73d9dd8fde451f36676
 EBUILD postfixadmin-2.3.ebuild 2575 RMD160 0b853172d89b85990678c04e85bc5dfd520b45f1 SHA1 0d278e51e268858096b88596dcc701ee972063d4 SHA256 a79f776299f75e53612cd865295eca02a34b3d4d8a91b0be12302b65c0f5255f
-MISC ChangeLog 650 RMD160 24e620e7bf590f503ef07f2072a5121adc78f555 SHA1 aa1633d38b6179a58a11a5ef939a2832270e7180 SHA256 077e033bf1320b783558b2c33c6e359745d20c46f5c369be9ab55f2f819c18bc
-MISC metadata.xml 614 RMD160 a6a3d90ead24d5e933042d1302f790f0f15d0b3b SHA1 f5e37c3f7145dce465a89e9ea4eec5aeb6cfdbc1 SHA256 4eec24d7fa99502a0473875ee687330744e6f1ad78f3300714464092f691f22c
+MISC ChangeLog 792 RMD160 221b03de7171d7e38fb16d25a3b71b63a7dde695 SHA1 f3b091fa7fc81b27d20ab3a918fd50e37153204c SHA256 adc1ded2b964ccb2b8ad8bf5885f5114bf72d4f169bc879d4957678c3325d9e3
+MISC metadata.xml 609 RMD160 30e4068e319b352c58538257210f92bd4ca838a8 SHA1 d5b1476d92c2810696211458eef07089bc1ca855 SHA256 b429fb57aecc532d83be5cfcbecd97b0d7abafbbb92b8b494847858f3412186a
