@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>rion-overlay</herd>
+<herd>no-herd</herd>
 <maintainer>
   <email>spamslepnoga@inbox.ru</email>
  <description></description> 
