@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*postfixadmin-2.3.2 ( 04 Sep 2010 )
+
+  04 Sep 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  +postfixadmin-2.3.2.ebuild, metadata.xml:
+  bump
+
 *postfixadmin-2.3.1
 
   31 Jul 2010; A. Vinogradov <spamslepnoga@inbox.ru>
